<resources>
    <string name="app_name">InverseEducation</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="dont_have_account">Нет аккаунта?</string>
    <string name="to_registration">Зарегистрируйтесь</string>
    <string name="personal_information">Личная информация</string>
    <string name="text_school">Школа:</string>
    <string name="text_class">Класс:</string>
    <string name="achievements">Достижения</string>
    <string name="achievement">Достижение</string>
    <string name="other_products_inverse">Другие продукты Inverse</string>
    <string name="inverse_frame">Inverse.Кадры</string>
    <string name="inverse_project">Inverse.Project</string>
    <string name="inverse_afisha">Inverse.Афиша</string>
    <string name="inverse_documents">Inverse.Документы</string>
    <string name="inverse_frame_description">Сервис для вовлечения сотрудников во внутрикорпоративные активности</string>
    <string name="inverse_project_description">Сервис для организации проектной деятельности в учебном заведении</string>
    <string name="inverse_afisha_description">Сервис для формирование туристических пакетов</string>
    <string name="inverse_documents_description">Сервис для автоматизации согласования документов внутри компании </string>
    <string name="search_with_endpoint">Найти...</string>
    <string name="application_sent">Заявка отправлена</string>
    <string name="soon_answer">Совсем скоро вам ответят!</string>
    <string name="back_to_section">Вернуться к секциям</string>
    <string name="documents">Документы</string>
    <string name="groups">Группы</string>
    <string name="download">Скачать</string>
    <string name="go_over">Перейти</string>
    <string name="privileges_and_prizes">Привилегии и призы</string>
    <string name="continue_read">Продолжить прочтение</string>
    <string name="save_textbook">Сохраненные учебники</string>
    <string name="all_textbook">Все учебники</string>
    <string name="recommend_you">Рекомендовано вам</string>
    <string name="my_section">Мои секции</string>
    <string name="suitable_you">Мои секции</string>
    <string name="all_section">Все секции</string>
    <string name="sign_up_section">Записаться</string>
    <string name="sign_up_section_title">Запись на секцию</string>
    <string name="data_legal_representative">Данные законного представителя</string>
    <string name="data_candidate">Данные кандидата на обучение</string>
    <string name="fio">ФИО *</string>
    <string name="snils">СНИЛС *</string>
    <string name="phone_number">Телефон *</string>
    <string name="documents_section_description">Для подачи заявки нужно прикрепить следующие документы:\n  1. Паспорт законного представителя\n  2. Паспорт/свидетельство о рождении ученика</string>
    <string name="add_folder">Прикрепить файлы</string>
    <string name="sections">Секции</string>
    <string name="calendar">Расписание</string>
    <string name="textbook">Учебники</string>
    <string name="news">Новости</string>
    <string name="profile">Профиль</string>
    <string name="error_login">Неправильная почта или пароль</string>
</resources>