<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="59dp"
            android:src="@drawable/image_logo_auth" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/labgrotesque_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.02"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/edit_text_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/labgrotesque_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.02"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/edit_text_hint"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:cornerRadius="12dp"
            android:paddingVertical="14dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/labgrotesque_medium"
            android:text="@string/login"
            android:backgroundTint="@color/background_button_block" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/background_bottom_login"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="@string/dont_have_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_text"
                android:layout_marginTop="4dp"
                android:textSize="13sp"
                android:text="@string/to_registration"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>