<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activity.fragment.SignUpSectionFragment"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_sign_up_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"

                >

                <ImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_button_back"
                    android:background="#00FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/labgrotesque_medium"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/sign_up_section_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/header_sign_up_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/data_legal_representative"
                    android:textSize="18sp"
                    android:fontFamily="@font/labgrotesque_medium" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/labgrotesque_regular"
                    android:hint="@string/fio"
                    android:inputType="text"
                    android:letterSpacing="0.02"
                    android:maxLines="1"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/labgrotesque_regular"
                    android:hint="@string/snils"
                    android:inputType="number"
                    android:letterSpacing="0.02"
                    android:maxLines="1"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/labgrotesque_regular"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:letterSpacing="0.02"
                    android:maxLines="1"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/data_candidate"
                    android:textSize="18sp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/labgrotesque_medium" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/labgrotesque_regular"
                    android:hint="@string/fio"
                    android:inputType="text"
                    android:letterSpacing="0.02"
                    android:maxLines="1"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/labgrotesque_regular"
                    android:hint="@string/snils"
                    android:inputType="number"
                    android:letterSpacing="0.02"
                    android:maxLines="1"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/documents"
                    android:textSize="18sp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/labgrotesque_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/documents_section_description"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/labgrotesque_regular" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cornerRadius="12dp"
                    android:paddingVertical="12dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/labgrotesque_medium"
                    android:text="@string/add_folder"
                    app:icon="@drawable/icon_folder_add"
                    app:iconGravity="textStart"
                    android:backgroundTint="@color/background_button_files" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/groups"
                    android:textSize="18sp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/labgrotesque_medium" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>