<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendRequestFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:paddingHorizontal="65dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_back_to_section"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="@string/application_sent"
            android:textSize="24sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/labgrotesque_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/edit_text_hint"
            tools:text="@string/soon_answer"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/labgrotesque_regular" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:cornerRadius="12dp"
            android:paddingVertical="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/labgrotesque_medium"
            android:text="@string/back_to_section"
            android:backgroundTint="@color/background_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>