<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AchievementsFragment"
    android:background="@drawable/image_background_achievements"
    android:adjustViewBounds="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"

        >
        
        <ImageButton
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon_button_back"
            android:background="#00FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/labgrotesque_medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/achievement" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sheet_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="30dp"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                tools:text="По любви"
                android:textSize="22sp"
                android:fontFamily="@font/labgrotesque_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                tools:text="Выиграть Всероссийскую олимпиаду школьников"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/labgrotesque_regular" />

            <LinearLayout
                android:id="@+id/layout_profile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_profile_photo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/documents"
                    android:textSize="18sp"
                    android:fontFamily="@font/labgrotesque_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginEnd="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                tools:text="Диплом призера ЗЭ ВсОШ"
                                android:textSize="14sp"
                                android:fontFamily="@font/labgrotesque_regular" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/third_text"
                                tools:text="2022-2023 учебный год"
                                android:textSize="12sp"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/labgrotesque_regular" />

                        </LinearLayout>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cornerRadius="8dp"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="10dp"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:fontFamily="@font/labgrotesque_medium"
                            android:text="@string/download"
                            android:backgroundTint="@color/background_button" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_profile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_profile_photo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/privileges_and_prizes"
                    android:textSize="18sp"
                    android:fontFamily="@font/labgrotesque_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginEnd="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                tools:text="+777 баллов “Другое дело”"
                                android:textSize="14sp"
                                android:fontFamily="@font/labgrotesque_regular" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/third_text"
                                tools:text="Промокод: 6A02LLB3D5"
                                android:textSize="12sp"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/labgrotesque_regular" />

                        </LinearLayout>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cornerRadius="8dp"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="10dp"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:fontFamily="@font/labgrotesque_medium"
                            android:text="@string/go_over"
                            android:backgroundTint="@color/background_button" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>